# playground

./: IpPackage.c  Longest_Common_Subsequence.c  compare.c  compile.bat  experimental.c  find_it.c  float_to_short_test.c  increment.c  labirint.c  labirint_test.c  lake.py  log.txt  macros.c  makefile  makefile_c  mask_test.c  quick_search.c  removecharect.c  reqursi.c  reversre.c  shkum_test.c  sqrt.c  sqrt.txt  test_const.c  test_int.c  test_uint.c  testamos.cpp  uint32_sub.c
fb/: .gitignore  CMakeLists.txt  add_fb_template.py  add_template.py  fill_fb_references.py  gccToolchain.cmake  main.c  node_editor.h  type_def.h
fb/fb/: CMakeLists.txt  fb101_add.c  fb101_add.h  fb1_above_set_point.c  fb1_above_set_point.h  fb2_below_set_point.c  fb2_below_set_point.h  fb_references.c  fb_references.h
playground/: .clangd  petg_low_speed.3mf  pla_last.3mf
playground/corne/: crkbd_rev1_test_f2.json
playground/cpp/basic/: CMakeLists.txt  compile_commands.json  config.cpp  config.hpp  description.txt  device_updater.cpp  device_updater.hpp  gccToolchain.cmake  http_client.cpp  http_client.hpp  keyboard.cpp  keyboard.hpp  logger.hpp  main.cpp  platform.hpp  udp_listener.cpp  udp_listener.hpp
playground/cpp/esp32_arduino/esp_cam/: app_httpd.cpp
playground/cpp/experiments/: CMakeLists.txt  add_binary.c  backtracking.cpp  bin_tree.hpp  binary_search.c  binary_search_array.hpp  binary_tree.c  bit_operations.hpp  bit_shift.c  can_jump.c  common.hpp  contains_duplicates.hpp  dp.hpp  flag_sort.hpp  gccToolchain.cmake  graph.hpp  heap_priority.hpp  hex.cpp  jumps_min.c  list_node.c  longest_palindromics.hpp  main.cpp  matrix.hpp  matrix_problems.hpp  max_profit.c  maximum_score_for_k_pairs.hpp  medium_sorted_arrays.c  merge_intervals.c  merge_linked_lists.hpp  merge_sort.c  min_total.c  minimum-number-of-moves-to-seat-everyone.cpp  morse.c  morse.cpp  morse.hpp  my_atoi.hpp  my_pow.hpp  queue_deque.hpp  reverse_integer.hpp  reverse_nodes.hpp  (+19 more)
playground/cpp/hex/: .gitignore  hex.cpp
playground/cpp/sws_list/: CMakeLists.txt  README.md  gccToolchain.cmake  sws_reader.cpp
playground/cpp/xml/: CMakeLists.txt  config.xml  demo.cpp  gccToolchain.cmake  xmlDict.hpp
playground/mechanical/: .clang-format  .editorconfig  cv_schematic.txt  extensions.json  nrf_gps_lora.txt  settings.json
playground/python/: .gitignore  Bookaddon.csv  RequirementListFromDoors.csv  add_ut_template.py  experiments.py  file_transfer.py  printout_struct.py  remove_all_comments_from_c_h.py  scapy_eth.py  simple_udp.py  stdout_struct.c  struct.c  sws_reader.py  udp_broadcast.py  uniq_Book_high.csv  uniq_Bookaddon.csv  uniq_RequirementListFromDoors.csv
playground/python/image_unite/: image_uniter.py  rm.py
playground/python/jenkins/: README.md  change_regsh.py  check_plc_version_with_bins.py  check_version_canfestival.py  check_version_generators.py  check_version_sofi_plc.py  compare_version_sofi_plc_with_bin.py  get_version_from_controller.py  get_version_sofi_plc.py  last_handled_command.txt  last_version.py  plc_testing.py  pull_canfestival.py  pull_generators.py  pull_sofi_plc.py  requirements.txt  sofi_plc_loader.py  telegram_api.py  telegram_handling.py
playground/python/jenkins/sofi_plc_build/: Jenkinsfile
playground/python/jenkins/sofi_plc_load/: Jenkinsfile
playground/python/jenkins/sofi_plc_telegram/: Jenkinsfile
playground/python/jenkins/sofi_plc_test/: Jenkinsfile
playground/python/listen_and_update/: devices_description.json  index.html  listen_server_main.py
playground/python/map/: test.py
playground/python/sensecap/: data_request.py  helium-sensecap.js  requirements.txt  sensecap_decode.py
playground/rust/: .gitignore
playground/rust/experiments/src/: main.rs
playground/rust/hex/src/: main.rs
playground/rust/listup/: Cargo.toml  devices_description.json
playground/rust/listup/src/: main.rs
playground/rust/modbus-client/: Cargo.toml
playground/rust/modbus-client/src/: main.rs
playground/rust/modbus-server/: Cargo.toml
playground/rust/modbus-server/src/: main.rs
playground/rust/multi_connection_server/: Cargo.toml
playground/rust/multi_connection_server/src/: main.rs
playground/rust/stm/: config.toml  fan_control.rs  stm.ioc
playground/rust/telegram/: Cargo.toml
playground/rust/telegram/src/: main.rs
playground/rust/udp_broadcast_sender/: Cargo.toml
playground/rust/udp_broadcast_sender/src/: main.rs
playground/zephyr/beacon/: CMakeLists.txt  prj.conf
playground/zephyr/beacon/boards/: xiao_ble.overlay  xiao_ble_nrf52840_sense.overlay
playground/zephyr/beacon/src/: main.c
playground/zephyr/beacon/src/battery/: battery.c  battery.h
