[package]
name = "listup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
reqwest = { version = "^0.11", features = ["blocking", "json"] }
log = "^0.4"
simplelog = "^0.12"
chrono = "^0.4"
crossterm = "^0.26"
regex = "^1.8"